<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="16dp"
    tools:context=".Tour">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tour_intro"
                android:textSize="18sp"
                android:textColor="#000000"/>
            <Button
                android:id="@+id/show_recipes_ind"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginBottom="20dp"
                android:gravity="bottom|right"
                android:background="@mipmap/tour_ind"
                android:text="@string/tour_indian"
                android:textSize="25sp"
                android:textColor="#ffffff"/>

            <Button
                android:id="@+id/show_recipes_ity"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginBottom="20dp"
                android:gravity="bottom|right"
                android:background="@mipmap/tour_italy"
                android:text="@string/tour_italian"
                android:textSize="25sp"
                android:textColor="#ffffff"/>
            <Button
                android:id="@+id/show_recipes_asn"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginBottom="20dp"
                android:gravity="bottom|right"
                android:background="@mipmap/tour_china"
                android:text="@string/tour_asian"
                android:textSize="25sp"
                android:textColor="#ffffff"/>
            <Button
                android:id="@+id/show_recipes_thai"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginBottom="20dp"
                android:gravity="bottom|right"
                android:background="@mipmap/tour_thai"
                android:text="@string/tour_thai"
                android:textSize="25sp"
                android:textColor="#ffffff"/>
            <!--<Button-->
            <!--android:id="@+id/show_recipes_medi"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="80dp"-->
            <!--android:layout_marginBottom="20dp"-->
            <!--android:gravity="bottom|right"-->
            <!--android:background="@drawable/tour_mediterranean"-->
            <!--android:text="@string/tour_mediterranean"-->
            <!--android:textSize="25sp"-->
            <!--android:textColor="#ffffff"/>-->
            <Button
                android:id="@+id/show_recipes_cont"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginBottom="20dp"
                android:gravity="bottom|right"
                android:background="@mipmap/tour_conti"
                android:text="@string/tour_continental"
                android:textSize="25sp"
                android:textColor="#ffffff"/>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.constraint.ConstraintLayout>