<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="16dp"
    tools:context=".Feedback">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">
            <TextView
                android:id="@+id/fb"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:text="@string/fb_type"
                android:textSize="18sp"/>

            <RadioGroup
                android:id="@+id/fb_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/fb_type_c"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/complaint"/>

                <RadioButton
                    android:id="@+id/fb_type_s"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/suggest"/>

                <RadioButton
                    android:id="@+id/fb_type_r"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/review"/>
            </RadioGroup>

            <TextView
                android:id="@+id/fb_text_title"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="bottom"
                android:text="@string/fb_title"
                android:textSize="18sp"
                />

            <EditText
                android:id="@+id/fb_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:ems="10"
                android:inputType="textCapSentences|textMultiLine"
                android:hint="Type your text..."
                android:cursorVisible="true"
                android:lines="4"
                />

            <Space
                android:id="@+id/space"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                />

            <TextView
                android:id="@+id/rating"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:text="How would you rate our app?"
                android:textSize="18sp"/>

            <RatingBar
                android:id="@+id/app_ratings"
                style="@style/Widget.AppCompat.RatingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:saveEnabled="true"
                android:numStars="5"/>

            <Button
                android:id="@+id/fb_submit"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:text="Submit"
                android:textSize="20sp"
                android:textColor="#ffffff"
                android:backgroundTint="@color/colorPrimary"
                />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.constraint.ConstraintLayout>